Milestone reached:  Functional! 3.2.7